# MLEng-politicalparties-python-exercise

./: .gitignore  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt  shell.nix
src/: app.containerfile  compose.yml  inference.containerfile
src/app/: Dockerfile  pyproject.toml
src/model-inference-endpoint/: inference.containerfile
src/model_inference_endpoint/: pyproject.toml
src/text_loader/: loader.py  pyproject.toml
tests/: test_data_loader.py
