[project]
name = "mle-interview"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shraddha Surana", email = "ssurana@thoughtworks.com" },
    { name = "twmeissane", email = "no-reply@thoughtworks.com" },
    { name = "sahgerlad", email = "no-reply@thoughtworks.com" },
    { name = "Joseph Wilson", email = "joseph.wilson@thoughtworks.com" },
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy<=2",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "fastapi>=0.112.0",
    "mlflow==2.11",
    "pydantic>=2.8.2",
    "streamlit>=1.37.0",
    "requests>=2.32.3",
    "uvicorn>=0.30.5",
    "xgboost>=2.1.1",
]

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.2.2", "pytest-mock>=3.14.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mle_interview"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
