[project]
name = "text-loader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Business-Wizard", email = "49175856+Business-Wizard@users.noreply.github.com" },
]
dependencies = [
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/text_loader"]
